src/objects/GuidanceRenderer__mdt.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AD</fullName>
                    <default>true</default>
                    <label>AD</label>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AN</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guidance_Content__c</fullName>
        <label>Guidance Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NextActivity__c</fullName>
        <label>NextActivity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Obtain Credit Card Information</fullName>
                    <default>true</default>
                    <label>Obtain Credit Card Information</label>
                </value>
                <value>
                    <fullName>Discovery, Goal Assessment</fullName>
                </value>
                <value>
                    <fullName>Case Selection &amp; Staff Roles</fullName>
                </value>
                <value>
                    <fullName>Records Training &amp; Finance</fullName>
                </value>
                <value>
                    <fullName>1st Case Submission,Workflow &amp; Mkt</fullName>
                </value>
                <value>
                    <fullName>1st Case Review/Approval</fullName>
                </value>
                <value>
                    <fullName>Team Training Ortho Benefits RDH</fullName>
                </value>
                <value>
                    <fullName>2nd Case Submission - External</fullName>
                </value>
                <value>
                    <fullName>2nd Case Review/Approval</fullName>
                </value>
                <value>
                    <fullName>3rd Case Submission</fullName>
                </value>
                <value>
                    <fullName>Team Meeting - Review Processes</fullName>
                </value>
                <value>
                    <fullName>3rd Case Review/Approval</fullName>
                </value>
                <value>
                    <fullName>Procedural Assessment</fullName>
                </value>
                <value>
                    <fullName>Reset Training</fullName>
                </value>
                <value>
                    <fullName>Who is your ideal aligner patient?</fullName>
                </value>
                <value>
                    <fullName>Clinical Education</fullName>
                </value>
                <value>
                    <fullName>Procedural Economics</fullName>
                </value>
                <value>
                    <fullName>Chairside Patient Education</fullName>
                </value>
                <value>
                    <fullName>Marketing Campaign</fullName>
                </value>
                <value>
                    <fullName>QBR (Low to Medium)</fullName>
                </value>
                <value>
                    <fullName>Business Assessment</fullName>
                </value>
                <value>
                    <fullName>Process Assessment</fullName>
                </value>
                <value>
                    <fullName>Patient Education</fullName>
                </value>
                <value>
                    <fullName>Economics</fullName>
                </value>
                <value>
                    <fullName>QBR (Medium to High L1)</fullName>
                </value>
                <value>
                    <fullName>Patient Acceptance</fullName>
                </value>
                <value>
                    <fullName>Clinical Development</fullName>
                </value>
                <value>
                    <fullName>Team Calibration</fullName>
                </value>
                <value>
                    <fullName>Marketing (M 2 H)</fullName>
                </value>
                <value>
                    <fullName>Peer 2 Peer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordTypeDeveloperName__c</fullName>
        <label>Record Type Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isTest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isTest</label>
        <type>Checkbox</type>
    </fields>
    <label>GuidanceProcedureTracking</label>
    <pluralLabel>GuidancesProcedureTracker</pluralLabel>
</CustomObject>